--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
             原因はエンジントラブルで治りそうにない。<br>
             なんとかして脱出しないと死んでしまう。<br>
             協力して、この窮地から脱出せよ！<br>
+            <!--
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
               <li>30分を超えるとS先生は出てこられない</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
+          -->
+          <p class="text-center">飛行機墜落まで推定20分…<br>
             まずはこの暗号を解かなくては！</p>
         </div>
       </div>
