--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
     </section>
     <section class="section">
       <div class="container">
-        <a class="btn" href="main.html">準備OK？では、ゲームスタート！！！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
+        <a class="btn" href="main.html">管制官側はこちらから！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
+      </div>
+    </section>
+     <section class="section">
+      <div class="container">
+        <a class="btn" href="main.html">パイロット側はこちらから！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
       </div>
     </section>
   </main>
