--- a/main.html
+++ b/main.html
@@ -34,8 +34,8 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">まずは、この学校の家庭科室の鍵のありかを知らなければ入ることができない。<br>
-              下の画像の謎を解き、鍵のありかをキーワード欄に入力しよう。</p>
+            <p class="text-center">まずはなんとかして連絡をつながないと何もできないが、飛行機の何も応答のない無線から異変に気づいた管制官はパイロットと管制室の連絡が取れないことに気づく。<br>
+              パスワードを手に入れ管制室と連絡を取りたい。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
