--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </section>
      <section class="section">
       <div class="container">
-        <a class="btn" href="main.html">パイロット側はこちらから！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
+        <a class="btn" href="main-pilot.html">パイロット側はこちらから！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
       </div>
     </section>
   </main>
