--- a/main-pilot.html
+++ b/main-pilot.html
@@ -36,7 +36,7 @@
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
             <p class="text-center">まずはなんとかして連絡をつながないと何もできないが、飛行機の何も応答のない無線から異変に気づいた管制官はパイロットと管制室の連絡が取れないことに気づく。<br>
               パスワードを手に入れ管制室と連絡を取りたい。</p>
-            <p class="text-center">謎をといて、パスワードを入手しよう。</p>
+            <p class="text-center">謎をといて、パスワードを入手しよう。<br>
               困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
             <div class="container">
               <figure class="image__container">
