--- a/main.html
+++ b/main.html
@@ -105,10 +105,10 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>正しいマニュアルを見つけよう</h2>
+              <p class="text-center">次は脱出の為のマニュアルが欲しい管制官。しかし、管制室には複数のマニュアルがありどれが正しいのかわからない。<br>
+                正しい情報をパイロットに伝えなくては！<br>
+                パイロットと管制官がうまく情報を共有してどのマニュアルが正しいのか選ぼう。</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
