--- a/main-pilot.html
+++ b/main-pilot.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fight in fright trouble　-　パイロット │ Project N</title>
+  <title>Fight in fright trouble　- パイロット │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -34,10 +34,10 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">まずはなんとかして連絡をつながないと何もできないが、飛行機の何も応答のない無線から異変に気づいた管制官はパイロットと管制室の連絡が取れないことに気づく。<br>
-              パスワードを手に入れ管制室と連絡を取りたい。</p>
-            <p class="text-center">謎をといて、パスワードを入手しよう。<br>
-              困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
+            <p class="text-center">まずはなんとかして連絡をつながないと何もできないが、飛行機の何も応答のない無線から異変に気づいたパイロットは管制官と連絡が取れないことに気づく。<br>
+              パスワードを手に入れ管制官と連絡を取りたい。</p>
+            <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
+  
             <div class="container">
               <figure class="image__container">
                 <img src="assets/images/stage.png" alt="">
@@ -87,7 +87,6 @@ Youtube貼り付けここまで -->
               <div class="clear-message__title">STAGE：１  クリア！</div>
               <div class="clear-message__content">管制室と連絡が取れた！<br>
                 この調子で謎をとき明かそう！</div>
-                ３つステージの謎をとき、暗号を見つけ出そう！</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
