--- a/main-pilot.html
+++ b/main-pilot.html
@@ -85,7 +85,7 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">管制室と連絡が取れた！<br>
+              <div class="clear-message__content">ZOOMに先程のパスワードを打ち込み、管制官と連絡を取ろう！<br>
                 この調子で謎をとき明かそう！</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
