--- a/main-pilot.html
+++ b/main-pilot.html
@@ -106,8 +106,8 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>正しいマニュアルを見つけよう</h2>
-              <p class="text-center">次は脱出の為のマニュアルが欲しい管制官。しかし、管制室には複数のマニュアルがありどれが正しいのかわからない。<br>
-                正しい情報をパイロットに伝えなくては！<br>
+              <p class="text-center">次は脱出の為のマニュアルを見たい。しかし、管制室には複数のマニュアルがあるらしく、どれが正しいのかわからない。<br>
+                正しい情報を管制官から得なくては！<br>
                 パイロットと管制官がうまく情報を共有してどのマニュアルが正しいのか選ぼう。</p>
             </div>
           </div>
@@ -129,7 +129,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="assets/images/mystery2-pilot.png" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
