--- a/main-pilot.html
+++ b/main-pilot.html
@@ -130,6 +130,7 @@ Youtube貼り付けここまで -->
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
                     <img src="assets/images/mystery2-pilot.png" alt="">
+                    <img src="assets/images/mystery2-pilot-2.png" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
