--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
         <!-- STAGE1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁ脱出しよう！</h2>
             <p class="text-center">まずはなんとかして連絡をつながないと何もできないが、飛行機の何も応答のない無線から異変に気づいた管制官はパイロットと管制室の連絡が取れないことに気づく。<br>
               パスワードを手に入れ管制室と連絡を取りたい。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
@@ -181,7 +181,7 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
               <div class="clear-message__content">脱出マニュアルを手に入れた。<br>
-                次のステージに進もう！</div>
+                そこには脱出の手順とエンジンの故障時の対処法が書いてあった。</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -196,10 +196,10 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>エンジンを停止しよう</h2>
+            <p class="text-center">エンジンを止めないと爆発の危険性がある。<br>
+              エンジンを止めるべく、<br>
+              正しいパスワードを入力しよう！</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
             </figure>
