--- a/main-pilot.html
+++ b/main-pilot.html
@@ -201,7 +201,7 @@ Youtube貼り付けここまで -->
               エンジンを止めるべく、<br>
               正しいパスワードを入力しよう！</p>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/mystery3-pilot.png" alt="">
             </figure>
           </div>
         </section>
