--- a/main-pilot.html
+++ b/main-pilot.html
@@ -374,7 +374,7 @@ STAGE3-3追加　ここまで -->
               エンジンを止めるべく、<br>
               正しいパスワードを入力しよう！</p>
             <figure class="image__container">
-              <img src="assets/images/" alt="">
+              <img src="assets/images/mystery5-pilot.png" alt="">
             </figure>
           </div>
         </section>
