--- a/main-pilot.html
+++ b/main-pilot.html
@@ -199,10 +199,10 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>正しいマニュアルを見つけよう</h2>
-              <p class="text-center">次は脱出の為のマニュアルを見たい。しかし、管制室には複数のマニュアルがあるらしく、どれが正しいのかわからない。<br>
-                正しい情報を管制官から得なくては！<br>
-                パイロットと管制官がうまく情報を共有してどのマニュアルが正しいのか選ぼう。</p>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>エンジンを停止しよう</h2>
+            <p class="text-center">エンジンを止めないと爆発の危険性がある。<br>
+              エンジンを止めるべく、<br>
+              正しいパスワードを入力しよう！</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
