--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="fight in flight trouble"></h1>
+    <h1 class="main-title"><img src="assets/images/main-image.png" alt=""></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
@@ -40,7 +40,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/stage.png" alt="">
+                <img src="assets/images/mystery1.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
@@ -129,7 +129,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="assets/images/mystery2-kanseikan.png" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
@@ -223,7 +223,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE3-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/mystery3-pilot.png" alt="">
+                    <img src="assets/images/mystery3-kanseikan.png" alt="">
                   </figure>
                   <!-- STAGE3-1問題セクション　ここまで -->
                   <!-- STAGE3-1解答入力セクション　ここから -->
@@ -317,7 +317,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE4-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/mystery4-pilot.png" alt="">
+                    <img src="assets/images/mystery4-kanseikan.png" alt="">
                   </figure>
                   <!-- STAGE4-1問題セクション　ここまで -->
                   <!-- STAGE4-1解答入力セクション　ここから -->
@@ -389,7 +389,7 @@ Youtube貼り付けここまで -->
               エンジンを止めるべく、<br>
               正しいパスワードを入力しよう！</p>
             <figure class="image__container">
-              <img src="assets/images/mystery5-pilot.png" alt="">
+              <img src="assets/images/mystery5-kanseikan.png" alt="">
             </figure>
           </div>
         </section>
