--- a/hint5.html
+++ b/hint5.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ヒント │ 封鎖された家庭科室からの脱出 │ Project N</title>
+  <title>ヒント │ Fight in fright trouble │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -34,10 +34,10 @@
         </div>
       </div>
     </section>
-    <!-- STAGE1ヒント　ここから -->
+    <!-- STAGE5ヒント　ここから -->
     <section id="stage1" class="section bg-color--gray">
       <div class="container">
-        <h2 class="section-title section-title--keycolor">STAGE：1</h2>
+        <h2 class="section-title section-title--keycolor">STAGE：5</h2>
         <div class="row">
           <div class="column">
             <div class="card">
@@ -48,13 +48,13 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">あああ</p>
+              <p class="card__content"> </p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- STAGE1ヒント　ここまで -->
+    <!-- STAGE5ヒント　ここまで -->
   </main>
   <footer class="footer section bg-color--gray">
     <div class="container">
