--- a/hint1.html
+++ b/hint1.html
@@ -42,7 +42,8 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">暗号の読み方（イントネーション）を工夫してみてください</p>
+              <p class="card__content">暗号１は同じ文字に同じ数字を入れればわかるよ。純粋な計算問題だよ。<br>
+                暗号２はキーボードを見れば規則性がわかるかも？？</p>
             </div>
           </div>
           <div class="column">
