--- a/hint1.html
+++ b/hint1.html
@@ -49,7 +49,9 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">3159WEH62</p>
+              <p class="card__content">3159WEH62<br>
+                暗号１の答えはW=3 I=1 N=5 G=9となる。<br>
+                暗号２はパソコンのキーボード上に描いてあるひらがなのところのアルファベットや数字を読めば解ける。</p>
             </div>
           </div>
         </div>
