--- a/hint2.html
+++ b/hint2.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">暗号の読み方に注意、立てなくなればわかる、たてなくなればわかる、たて・なくなればわかる・・・おっと、ちょっとヒントを出しすぎたかもしれませんね。この漢字の中から何かがなくなりますよ。</p>
             </div>
               
  <!-- 2-2ヒント追加
@@ -63,7 +63,8 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">2832</p>
+              <p class="card__content">2832<br>
+              　　　　暗号の読み方を工夫してみると、立てなくなればわかる⇨縦なくなればわかる。よって、この4文字から縦線をなくすと、漢字で二八三二となる。</p>
             </div>
               
 <!-- 2-2答え追加
