--- a/hint3.html
+++ b/hint3.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">まずは「目」の前の文字をを３つ見つけよう。そのあとはいろんな言い方で「目」を探してみよう。アイ、眼球、ひとm・・・おっと、これ以上は答えになっちゃうのでだめです。</p>
             </div>
               
  <!-- 3-2ヒント追加
