--- a/hint3.html
+++ b/hint3.html
@@ -63,7 +63,8 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">エンジン</p>
+              <p class="card__content">エンジン<br>
+                まずは３つの「め」の前、「え」「じ」「ん」が見つかります。その後、「目」を別の言い方で「瞳」に直すと、文章の中に隠れている「ひとみ」の前に「ん」を見つけることができます。</p>
             </div>
 
  <!-- 3-2答え追加
