--- a/hint4.html
+++ b/hint4.html
@@ -42,7 +42,8 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">動画を最後までみてみよう！</p>
+              <p class="card__content">パイロットには座席表が、管制官には座席番号が送られているよ。まずはこの２つを照らし合わせて、うまく8文字の暗号を作ってみよう。<br>
+                暗号ができたら、パイロットが持っている第２の暗号を使って謎を解こう。この8文字の暗号の中に「音」が含まれているよ。曲とか聞いたり、ピアノを弾いていたら常に耳にするあの７つの音のことだよ。</p>
             </div>
           </div>
           <div class="column">
