--- a/hint4.html
+++ b/hint4.html
@@ -42,14 +42,14 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">パイロットには座席表が、管制官には座席番号が送られているよ。まずはこの２つを照らし合わせて、うまく8文字の暗号を作ってみよう。<br>
-                暗号ができたら、パイロットが持っている第２の暗号を使って謎を解こう。この8文字の暗号の中に「音」が含まれているよ。曲とか聞いたり、ピアノを弾いていたら常に耳にするあの７つの音のことだよ。</p>
+              <p class="card__content">パイロットには座席表が、管制官には座席番号が送られているよ。まずはこの２つを照らし合わせて、うまく8文字の暗号を作ってみよう。暗号ができたら、パイロットが持っている第２の暗号を使って謎を解こう。この8文字の暗号の中に「音」が含まれているよ。曲とか聞いたり、ピアノを弾いていたら常に耳にするあの７つの音のことだよ。</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">ひこうき</p>
+              <p class="card__content">ひこうき<br>
+                まずは「ひみこうみそしき」という暗号を手に入れる。第２の暗号の音とは「ドレミファソラシ」を表しており、この8文字の暗号からこれらを抜くと「ひこうき」の4文字ができる。</p>
             </div>
           </div>
         </div>
