--- a/hint5.html
+++ b/hint5.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">動画を最後までみてみよう！</p>
+              <p class="card__content">パイロットの文章は配置に意味があるよ。文章の中身とか意味は一切謎に関係がないので、管制官に伝える際は配置も教えてあげよう。管制官の暗号は、「空」という時に注目してみよう。この文字を２つに分けると、１つの漢字と１つのひらがなが出てくるから、あとはパイロットの暗号と照らし合わせて、２つの中から答えを見つけよう。</p>
             </div>
           </div>
           <div class="column">
