--- a/hint5.html
+++ b/hint5.html
@@ -48,7 +48,8 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">くうこう</p>
+              <p class="card__content">くうこう<br>
+                「空」という字は「穴」と「エ」の２つに分解することができる。パイロットの暗号にも「空」と「穴」があるので、この中を読んでみると「くうこう」を見つけることができる。</p>
             </div>
           </div>
         </div>
