--- a/final-pilot.html
+++ b/final-pilot.html
@@ -23,8 +23,8 @@
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、管制官と協力できたおかげで、<br>
+            なんとか飛行機から脱出し、助かることができた。</p>
         </div>
       </div>
     </section>
@@ -44,10 +44,8 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">絶体絶命だったが一命をとりとめられて良かった。</p>
+        <p class="text-center">それでは、いつか</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
