--- a/final-pilot.html
+++ b/final-pilot.html
@@ -45,7 +45,7 @@ Youtube貼り付けここまで-->
       </div>
          -->
         <p class="text-center">絶体絶命だったが一命をとりとめられて良かった。</p>
-        <p class="text-center">それでは、いつか</p>
+        <p class="text-center">それでは、またいつか</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
