--- a/final.html
+++ b/final.html
@@ -31,7 +31,7 @@
     <section class="section">
       <div class="container">
           <figure class="image__container">
-             <img src="assets/images/stage.png" alt="">
+             <img src="assets/images/paragliding-918721_1920.jpg" alt="">
           </figure>
 
 <!--  YouTube貼り付け
