--- a/final.html
+++ b/final.html
@@ -63,8 +63,9 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
-                テキストテキストテキストテキストテキストテキストテキスト<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                謎担当　浦上蒼　崔文美　志村優樹　<br>
+                デザイン担当　鶴田杏　佐賀勇太　<br>
+                サイト担当　小林純也　松島みなも　</p>
             </div>
           </div>
         </div>
