--- a/final-pilot.html
+++ b/final-pilot.html
@@ -40,7 +40,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/IRyJe-0Uie0?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
-Youtube貼り付けここまで-->
+Youtube貼り付けここまで
           ß
       </div>
          -->
