--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/true-top-image.png" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ Fight in fright trouble"></h1>
+    <h1 class="main-title"><img src="assets/images/main.png" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ Fight in fright trouble"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
