--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/true-main-image.png" alt="Fight in fright trouble"></h1>
+    <h1 class="main-title"><img src="assets/images/top.png" alt="Fight in fright trouble"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
