--- a/hint5.html
+++ b/hint5.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/true-main-image.png" alt="Fight in flight trouble"></h1>
+    <h1 class="main-title"><img src="assets/images/top.png" alt="Fight in flight trouble"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
